# blockcillin-js

./: .gitignore  CMakeLists.txt  Makefile  README.md  app.yaml  blockcillin.cpp  game.cpp  game.h  gtest.mk  main.cpp
appengine/: app.yaml
appengine/blockcillin/template/: template.go
appengine/handlers/: debug.go  index.go
appengine/static/glsl/: fragment.glsl
appengine/templates/: debug.html  index.html
data/: fragment-shader.txt  vertex-shader.txt
handlers/: init.go
src/: CMakeLists.txt  app.yaml  file.cc  file.h  game.cc  game.h  glutil.cc  glutil.h  io.cc  io.h  ioutil.cc  ioutil.h  log.cc  log.h  main.cc  main.js  shader.h  shader_unittest.cc
src/blockcillin/template/: mode.go  template.go
src/client/js/: compiled.js  main.js
src/client/templates/: common.html  index.html  tests.html
src/handlers/: handlers.go  index.go  init.go  test.go  tests.go
src/res/css/: game.css  index.css  site.css  tests.css
src/res/js/: animation.js  animation2.js  audio_sound.js  blockcillin.js  board.js  board_view.js  cell.js  cell_view.js  chain.js  chain_test.js  compiled.js  config.js  controller.js  drop.js  game.js  gl.js  gl_test.js  log.js  main.js  math.js  math_matrix.js  math_test.js  matrix.js  menu_credits.js  menu_game.js  menu_main.js  menu_options.js  menu_stats.js  quantity.js  quantity_view.js  ready.js  resources.js  ring.js  selector.js  selector_view.js  stage_view.js  state_manager.js  storage.js  time.js  time_clock.js  (+3 more)
src/res/js/bc/: animation.js  audio_player.js  block.js  board.js  board_view.js  boardview.js  cell.js  cell_chain.js  cell_drop.js  cell_view.js  cellview.js  chain.js  constants.js  controller.js  direction.js  drop.js  game.js  gl.js  graphics.js  log.js  main.js  math.js  math_matrix.js  matrix.js  menu_credits.js  menu_game.js  menu_main.js  menu_stats.js  quantity.js  quantity_view.js  resources.js  ring.js  selector.js  selector_view.js  selectorview.js  stage.js  stage_view.js  stat.js  stat_board.js  stat_view.js  (+7 more)
src/res/js/bc-compiled/: bc.js
src/res/js/bc-tests/: cell_chain_test.js  chain_test.js  gl-test.js  gl_test.js  math_test.js
src/res/js/bc/app/: stat.js  stat_board.js
src/res/js/bc/audio/: player.js  sound.js
src/res/js/bc/board/: model.js  view.js
src/res/js/bc/common/: animation.js  clock.js  controller.js  direction.js  gl.js  keycode.js  log.js  math.js  matrix.js  stopwatch.js  storage.js  unit.js
src/res/js/bc/core/: board.js  cell.js  chain.js  drop.js  ring.js  selector.js  stage.js  stat.js  stat_board.js
src/res/js/bc/game/: stat.js  stat_board.js
src/res/js/bc/menu/: game.js  main.js  menu.js  options.js  stats.js
src/res/js/bc/score/: score.js  view.js
src/res/js/bc/stat/: stat.js  view.js
src/res/js/bc/view/: board.js  cell.js  resources.js  selector.js  stage.js  stat.js
src/res/js/qunit/: qunit-close-enough.js
src/res/jstests/: bc_test.js  game_test.js  matrix_test.js  util_test.js  webgl_test.js
src/res/sunvox/: button_click.sunvox  cell_clear.sunvox  cell_swap.sunvox  selector.sunvox  sounds.sunvox
src/res/xcf/: block-texture.xcf  favicon.xcf  textures.xcf
src/resources/jscompiled/: blockcillin.js
src/resources/jstests/: time_test.js
src/server/handlers/: index.go  init.go  tests.go
src/server/template/: template.go
src/shared/templates/: tests.html
src/static/css/: site.css
src/static/glsl/: fragment.glsl  vertex.glsl
src/static/js/: bc.js  blockcillin.js  compiled.js  main.js  math.js  math_test.js  matrix.js  test.js  time.js  time_test.js  vector.js
src/templates/: common.html  debug.html  index.html  menu.html  menus.html  scripts.html  shaders.html  test.html  tests.html
templates/: index.html
